20220511:
 * Added prototype of ic::prototype-get-ml-model-resnet50-onnx with variations
