@@ -1,0 +1,42 @@
+{
+  "alias": "prototype-get-imagenet-val",
+  "automation_alias": "ic",
+  "automation_uid": "972c28dafb2543fa",
+  "install":true,
+  "default_variations":["v2012-500"],
+  "deps": [
+    {
+      "tags": "get,sys-utils-cm"
+    },
+    {
+      "tags": "echo-off"
+    }
+  ],
+  "env": {
+    "CM_CLEAN_DIRS": "images"
+  },
+  "new_env": {
+    "CM_DATASET": "IMAGENET"
+  },
+  "tags": [
+    "prototype",
+    "get",
+    "dataset",
+    "imagenet",
+    "ILSVRC",
+    "image-classification",
+    "original"
+  ],
+  "variations": {
+    "v2012-500": {
+      "env": {
+        "CM_PACKAGE_URL": "https://www.dropbox.com/s/57s11df6pts3z69/ILSVRC2012_img_val_500.tar"
+      },
+      "new_env": {
+        "CM_DATASET_VER": "2012",
+        "CM_DATASET_SIZE": "500"
+      }
+    }
+  },
+  "uid": "7afd58d287fe4f11"
+}
