@@ -1,0 +1,6 @@
+wget -nc https://www.dropbox.com/s/57s11df6pts3z69/ILSVRC2012_img_val_500.tar --no-check-certificate
+mkdir images
+tar -C images -xvf ILSVRC2012_img_val_500.tar
+del /Q /S ILSVRC2012_img_val_500.tar
+
+echo CM_DATASET_PATH=%CD%\images > tmp-run-env.out
