@@ -1,4 +1,5 @@
 echo ${CM_PYTHON_BIN}
+echo ${CM_DATASET_PATH}
 echo ${CM_ML_MODEL_FILE_WITH_PATH}
 
 #python3 src/onnx_classify.py $@
